Chart spacing issues

--- a/Application/wwwroot/css/site.css
+++ b/Application/wwwroot/css/site.css
@@ -78,10 +78,3 @@ body {
     height: 150px;
 }
 
-.chart1 {
-    width: 25%;
-}
-
-.chart2 {
-    width: 25%;
-}
